# GenePcc

./: .gitignore  Cargo.toml
src/: args.rs  caculate_core.rs  main.rs  pearson.rs  plot.rs  readfile.rs  rm_lowentropy.rs  spearman.rs  writerfile.rs
