[package]
name = "cst_gene_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
flate2 = "1.0.28"
tokio = { version = "1.35.1", features = ["full"] }
rayon = "1.8.0"
ndarray = "0.15"
ndarray-stats = "0.5.1"
plotlib = "0.5.1"
clap-v3 = "3.0.0-beta.1"
dashmap = "4.0"
ansi_term = "*"
statrs = "0.16.0"
num_cpus = "*"


[profile.release]
lto = true